# invoice-pdf-editor

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  render.yaml  requirements.txt
app/: main.py  models.py  pipeline.py
app/ai/: prompt_interpreter.py
app/api/: routes.py
app/calculator/: amount_words.py  invoice_calc.py  number_fmt.py
app/parser/: prompt_parser.py
app/pdf_engine/: editor.py  extractor.py
app/templates/: index.html
app/validators/: validator.py
tests/: test_ai_interpreter.py  test_amount_words.py  test_api.py  test_calculator.py  test_number_fmt.py  test_parser.py
